name: hswift
version: 0.0.1
author: Mitroshin Maxim <rocco66max@gmail.com>

category: API
synopsis: API for Open Stack Swift object storage.

cabal-version: >= 1.18
tested-with: GHC ==7.6.*
build-type: Simple

library
    ghc-options:      -Wall -fno-warn-orphans
    default-language: Haskell2010
    hs-source-dirs:   src
    build-depends: base                 == 4.6.*
                 , http-conduit         == 1.9.*
                 , bytestring           == 0.10.*
                 , transformers         == 0.3.*
                 , mtl                  == 2.1.*
                 , transformers-base    == 0.4.*
                 , case-insensitive     == 1.0.*
                 , network              == 2.4.*
                 , exceptions           == 0.1.*
                 , aeson                == 0.6.*
                 , http-types           == 0.8.*
                 , conduit              == 1.0.*
                 , monad-control        == 0.3.*
                 , resourcet            == 0.4.*
                 , attoparsec           == 0.10.*
                 , stringlike           == 0.0.*
                 , unordered-containers == 0.2.*
                 , vector               == 0.10.*
                 , failure              == 0.2.*
    exposed-modules: Swift
    default-extensions: LambdaCase
                        OverloadedStrings
                        RecordWildCards